KM - cambios en la pagina

--- a/index.html
+++ b/index.html
@@ -3,10 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <link rel="stylesheet" href="styles/index.css">
     <title>Document</title>
 </head>
 <body>
+<main>
+    <section class="banner">
+<h2>MAKE YOUR WORKSTATION FUN WITH ENTERTAIMENT</h2>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo 
+    dignissimos doloremque dicta! Laboriosam totam molestias veniam enim 
+    tenetur similique neque accusantium odio ad. Ullam quae odit dolorem fugiat 
+    quam commodi?</p>
+    <button>View ➡️</button>
+    </section>
+</main><br>
     <footer>
+        <div class="footer-columns">
+      <div><h4>Address</h4><p>Creative & Clean<br>England</p></div>
+      <div><h4>Product</h4><p>Feature<br>Pricing</p></div>
+      <div><h4>Learn</h4><p>Resources<br>Blog</p></div>
+      <div><h4>Pricing</h4><p>Plan<br>Compare</p></div>
+        </div>
         <p>© 2017 all rights reserved by Getmiraj@gmail.com</p>
     </footer>
 </body>
