KM - Ultima modificacion

--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
     dignissimos doloremque dicta! Laboriosam totam molestias veniam enim 
     tenetur similique neque accusantium odio ad. Ullam quae odit dolorem fugiat 
     quam commodi?</p>
-    <button>View ➡️</button>
+    <button>View →</button>
     </section>
 </main><br>
     <footer>
         <div class="footer-columns">
-      <div><h4>Address</h4><p>Creative & Clean<br>England</p></div>
-      <div><h4>Product</h4><p>Feature<br>Pricing</p></div>
-      <div><h4>Learn</h4><p>Resources<br>Blog</p></div>
-      <div><h4>Pricing</h4><p>Plan<br>Compare</p></div>
+      <div><h4>Address</h4><p>Creative & Clean<br>Sylhet 3100<br>Dhaka<br>Bangladesh.</p></div>
+      <div><h4>Product</h4><p>Feature<br>Pricing<br>Marketplace<br>Open-source</p></div>
+      <div><h4>Learn</h4><p>Documentation<br>Tutorial</p>Blog<br>Resources</div>
+      <div><h4>Pricing</h4><p>Basic<br>Regular<br>Premium<br>Platinum</p></div>
         </div>
         <p>© 2017 all rights reserved by Getmiraj@gmail.com</p>
     </footer>
