KM - casi terminado, falta el degrade

--- a/index.html
+++ b/index.html
@@ -9,22 +9,56 @@
 <body>
 <main>
     <section class="banner">
-<h2>MAKE YOUR WORKSTATION FUN WITH ENTERTAIMENT</h2>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo 
-    dignissimos doloremque dicta! Laboriosam totam molestias veniam enim 
-    tenetur similique neque accusantium odio ad. Ullam quae odit dolorem fugiat 
-    quam commodi?</p>
-    <button>View →</button>
+        <h1><span>Creative & Clean</h1></span>
+        <h2>LUXURY WORKSTATION WITH STYLE</h2>
+        <button>View →</button>
     </section>
-</main><br>
+
+    <section class="banner2">
+    <div class="text">
+      <h3>MAKE YOUR WORKSTATION FUN WITH ENTERTAINMENT.</h3>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus explicabo maiores sint sit, nam 
+        in eum asperiores laudantium dolorem, rem voluptates excepturi minus ducimus nostrum.</p>
+        <button>View →</button> 
+    </div>
+    <aside class="imagen">
+      <img src="assets/imagenes/imagen2.png"/>
+    </aside>
+    </section><br>
+
+
+    <section class="banner3">
+    <aside class="image">
+      <img src="assets/imagenes/imagen3.png"/>
+    </aside>
+    <div class="texto">
+      <h3>WORK ANYWEHRE YOU LIKE, ANYWEHRE YOU PREFER.</h3>
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus explicabo maiores sint sit, nam 
+        in eum asperiores laudantium dolorem, rem voluptates excepturi minus ducimus nostrum.</p>
+        <button>View →</button>   
+    </div>
+    </section>
+
+
+
+    <section class="final">
+    <div class="text3">
+        <h3>SUPPLY OF UNMILITED RESOURCES.</h3>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus explicabo maiores sint sit, nam in eum asperiores laudantium dolorem, rem voluptates excepturi minus ducimus nostrum.</p>
+        <button>View →</button>
+    </div>
+    </section>
+</main>
     <footer>
         <div class="footer-columns">
-      <div><h4>Address</h4><p>Creative & Clean<br>Sylhet 3100<br>Dhaka<br>Bangladesh.</p></div>
-      <div><h4>Product</h4><p>Feature<br>Pricing<br>Marketplace<br>Open-source</p></div>
-      <div><h4>Learn</h4><p>Documentation<br>Tutorial</p>Blog<br>Resources</div>
-      <div><h4>Pricing</h4><p>Basic<br>Regular<br>Premium<br>Platinum</p></div>
+          <div><h4>Address</h4><p>Creative & Clean<br>Sylhet 3100<br>Dhaka<br>Bangladesh.</p></div>
+          <div><h4>Product</h4><p>Feature<br>Pricing<br>Marketplace<br>Open-source</p></div>
+          <div><h4>Learn</h4><p>Documentation<br>Tutorial</p>Blog<br>Resources</div>
+          <div><h4>Pricing</h4><p>Basic<br>Regular<br>Premium<br>Platinum</p></div>
         </div>
-        <p>© 2017 all rights reserved by Getmiraj@gmail.com</p>
+        <div class="fotrt">
+          <p>© 2017 all rights reserved by Getmiraj@gmail.com</p>
+        </div>
     </footer>
 </body>
 </html>
