KM - version final

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <main>
     <section class="banner">
-        <h1><span>Creative & Clean</h1></span>
+        <h1>Creative & Clean</h1>
         <h2>LUXURY WORKSTATION WITH STYLE</h2>
         <button>View →</button>
     </section>
@@ -18,7 +18,7 @@
     <div class="text">
       <h3>MAKE YOUR WORKSTATION FUN WITH ENTERTAINMENT.</h3>
       <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus explicabo maiores sint sit, nam 
-        in eum asperiores laudantium dolorem, rem voluptates excepturi minus ducimus nostrum.</p>
+        in eum asperiores laudantium dolorem, rem voluptates excepturi minus ducimus nostrum.</p><br>
         <button>View →</button> 
     </div>
     <aside class="imagen">
@@ -34,7 +34,7 @@
     <div class="texto">
       <h3>WORK ANYWEHRE YOU LIKE, ANYWEHRE YOU PREFER.</h3>
       <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus explicabo maiores sint sit, nam 
-        in eum asperiores laudantium dolorem, rem voluptates excepturi minus ducimus nostrum.</p>
+        in eum asperiores laudantium dolorem, rem voluptates excepturi minus ducimus nostrum.</p><br>
         <button>View →</button>   
     </div>
     </section>
@@ -43,9 +43,9 @@
 
     <section class="final">
     <div class="text3">
-        <h3>SUPPLY OF UNMILITED RESOURCES.</h3>
+        <h3>SUPPLY OF UNLIMITED RESOURCES...</h3>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusamus explicabo maiores sint sit, nam in eum asperiores laudantium dolorem, rem voluptates excepturi minus ducimus nostrum.</p>
-        <button>View →</button>
+        <button>Check this out →</button>
     </div>
     </section>
 </main>
@@ -53,9 +53,10 @@
         <div class="footer-columns">
           <div><h4>Address</h4><p>Creative & Clean<br>Sylhet 3100<br>Dhaka<br>Bangladesh.</p></div>
           <div><h4>Product</h4><p>Feature<br>Pricing<br>Marketplace<br>Open-source</p></div>
-          <div><h4>Learn</h4><p>Documentation<br>Tutorial</p>Blog<br>Resources</div>
+          <div><h4>Learn</h4><p>Documentation<br>Tutorial<br>Blog<br>Resources</p></div>
           <div><h4>Pricing</h4><p>Basic<br>Regular<br>Premium<br>Platinum</p></div>
-        </div>
+        </div><br><br><br>
+        <div class="footer-divider-line"></div>
         <div class="fotrt">
           <p>© 2017 all rights reserved by Getmiraj@gmail.com</p>
         </div>
